Update Kotlin to 1.4